Fix build break on EFL port since r169869 https://bugs.webkit.org/show_bug.cgi?id=133785

Unreviewed, fix a build break on EFL port.

Patch by Gyuyoung Kim <gyuyoung.kim@samsung.com> on 2014-06-11

* WebProcess/InjectedBundle/API/c/WKBundlePage.cpp: Use defined(TARGET_OS_IPHONE).
* WebProcess/InjectedBundle/API/c/WKBundlePagePrivate.h: ditto.

Canonical link: https://commits.webkit.org/151764@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169879 268f45cc-cd09-0410-ab3c-d52691b4dbfc